@@ -60,20 +60,10 @@ Copyright (C) 2008 Apple Inc. All Rights Reserved.
 #import "CCPVRTexture.h"
 #import "ccMacros.h"
 #import "CCConfiguration.h"
+#import "Support/ccUtils.h"
 
 #define PVR_TEXTURE_FLAG_TYPE_MASK	0xff
 #define PVR_TEXTURE_FLAG_FLIPPED_MASK 0x10000
-
-static unsigned int nextPOT(unsigned int x)
-{
-    x = x - 1;
-    x = x | (x >> 1);
-    x = x | (x >> 2);
-    x = x | (x >> 4);
-    x = x | (x >> 8);
-    x = x | (x >>16);
-    return x + 1;
-}
 
 static char gPVRTexIdentifier[4] = "PVR!";
 
@@ -181,7 +171,7 @@ typedef struct _PVRTexHeader
 	if( flipped )
 		CCLOG(@"cocos2d: WARNING: Image is flipped. Regenerate it using PVRTexTool");
 
-	if( header->width != nextPOT(header->width) || header->height != nextPOT(header->height) )
+	if( header->width != ccNextPOT(header->width) || header->height != ccNextPOT(header->height) )
 		CCLOG(@"cocos2d: WARNING: PVR NPOT textures are not supported. Regenerate it.");
 	
 	for( tableFormatIndex_=0; tableFormatIndex_ < MAX_TABLE_ELEMENTS ; tableFormatIndex_++) {
