@@ -1,0 +1,24 @@
+/*
+ * cocos2d for iPhone: http://www.cocos2d-iphone.org
+ *
+ */
+
+/*
+ ccNextPOT function is licensed under the same license that is used in CCTexture2D.m.
+ */
+
+
+/** @file ccUtils.h
+ Misc free functions
+*/
+
+/** returns the Next Power of Two value.
+ 
+ Examples:
+	- If "value" is 15, it will return 16.
+	- If "value" is 16, it will return 16.
+	- If "value" is 17, it will return 32.
+ 
+ @since v0.99.5
+ */
+unsigned int ccNextPOT( unsigned int value );
